Update slides URL

--- a/slides/8.md
+++ b/slides/8.md
@@ -8,4 +8,4 @@
 
 *   [D.o: Using Composer to manage Drupal site dependencies](https://www.drupal.org/node/2718229)
 
-*   [These slides](<https://github.com/fafnirical/presentation-drupal-composer>)
+*   [These slides](<https://git.io/vD9EV>)
