Fix ordered list starting number

--- a/slides/6.md
+++ b/slides/6.md
@@ -50,7 +50,7 @@ Composer can use [`cweagans/composer-patches`](https://github.com/cweagans/compo
     ```
 
 
-<ol>
+<ol start="2">
   <li>
     <p>Make sure the patch applies:</p>
     <pre><code data-trim data-noescape class="bash">
