Fix slides link on last slide

--- a/slides/8.md
+++ b/slides/8.md
@@ -8,4 +8,4 @@
 
 *   [D.o: Using Composer to manage Drupal site dependencies](https://www.drupal.org/node/2718229)
 
-*   [These slides](<https://git.io/vD9EV>)
+*   These slides: <https://git.io/vD9EV>
